--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -499,6 +499,14 @@ CONFIG_CRYPTO_ADIANTUM=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_CRYPTO_ZSTD=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
+CONFIG_CRYPTO=y
+CONFIG_CRYPTO_HASH=y
+CONFIG_CRYPTO_SHASH=y
+CONFIG_CRYPTO_SHA1=y
+CONFIG_CRYPTO_SHA256=y
+CONFIG_CRYPTO_MANAGER=y
+CONFIG_CRYPTO_HASH_INFO=y
+CONFIG_CRYPTO_USER_API_HASH=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC8=y
 CONFIG_XZ_DEC=y
