--- a/drivers/misc/mediatek/tc1_interface/Makefile
+++ b/drivers/misc/mediatek/tc1_interface/Makefile
@@ -13,4 +13,5 @@
 
 obj-$(CONFIG_MTK_TC1_FEATURE) += lg_partition.o
 obj-$(CONFIG_MTK_TC1_FEATURE) += lgtest.o
+obj-$(CONFIG_MTK_TC1_INTERFACE) += lg_partition.o lg_partition_meid_stub.o
 
